[gd_scene load_steps=22 format=3 uid="uid://bvunv18pd7poj"]

[ext_resource type="Script" path="res://workshop/workshop.gd" id="1_b1ql3"]
[ext_resource type="Texture2D" uid="uid://cax8g86gf3gbu" path="res://workshop/background.png" id="2_f1rnh"]
[ext_resource type="PackedScene" uid="uid://c01iq33mrndvq" path="res://mech_gfx/mech_gfx.tscn" id="3_gnit3"]
[ext_resource type="Theme" uid="uid://cs33qvqc60ek3" path="res://theme.tres" id="4_0chy5"]
[ext_resource type="Script" path="res://common/general_item_drop_area.gd" id="5_tgocy"]
[ext_resource type="Texture2D" uid="uid://d1afitfvumstr" path="res://workshop/kg.png" id="6_c8ey3"]
[ext_resource type="FontVariation" uid="uid://bo5qt13y6gh74" path="res://assets/fonts/American Captain Eternal.tres" id="7_pwoxb"]
[ext_resource type="PackedScene" uid="uid://bhdswejeu4hmu" path="res://item_slot/item_slot.tscn" id="8_del3g"]
[ext_resource type="PackedScene" uid="uid://dxm2x6p0msmj2" path="res://common_scenes/stats_display/stats_display.tscn" id="9_0u8y1"]
[ext_resource type="PackedScene" uid="uid://hk5syjovd1ar" path="res://items_index/items_index.tscn" id="10_4wwq4"]
[ext_resource type="PackedScene" uid="uid://bv6qpou5cqp1x" path="res://common_scenes/sm_items_list/sm_items_list.tscn" id="11_023lt"]
[ext_resource type="Texture2D" uid="uid://hbqg7irhtbdf" path="res://assets/images/slots/symbols/TORSO.png" id="12_3vlsv"]
[ext_resource type="Texture2D" uid="uid://doko3ukpf1at2" path="res://assets/images/slots/symbols/SIDE_WEAPON.png" id="13_i7cqi"]
[ext_resource type="Texture2D" uid="uid://cd45ha4cuow53" path="res://assets/images/slots/symbols/TOP_WEAPON.png" id="14_jnay7"]
[ext_resource type="Texture2D" uid="uid://bc6qq46i2r2nh" path="res://assets/images/slots/symbols/DRONE_2.png" id="15_7xkvw"]
[ext_resource type="Texture2D" uid="uid://bti8w5gjhraar" path="res://assets/images/slots/symbols/specials.png" id="16_1lxqr"]
[ext_resource type="Texture2D" uid="uid://cs6pqo8xr5j15" path="res://assets/images/slots/symbols/MODULE_2.png" id="17_yemp4"]
[ext_resource type="Texture2D" uid="uid://cea0tr4m7gwwv" path="res://assets/images/slots/symbols/PERK.png" id="18_tyb6r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q477y"]
content_margin_left = 10.0
content_margin_top = 4.0
content_margin_right = 10.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.109804, 0.309804, 0.0705882, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="LabelSettings" id="LabelSettings_tybj5"]
font = ExtResource("7_pwoxb")
font_size = 17

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mssp5"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.0234375, 0.0664063, 0.105469, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.320313, 0.320313, 0.332031, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 5
corner_radius_bottom_left = 6

[node name="Workshop" type="Node2D"]
script = ExtResource("1_b1ql3")

[node name="Background" type="Sprite2D" parent="."]
visible = false
position = Vector2(575.375, 378)
scale = Vector2(1.29225, 1.29718)
texture = ExtResource("2_f1rnh")

[node name="MechGFX" parent="." instance=ExtResource("3_gnit3")]
unique_name_in_owner = true
position = Vector2(390, 390)
scale = Vector2(0.7, 0.7)

[node name="Interface" type="CanvasLayer" parent="."]

[node name="Theme" type="Control" parent="Interface"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_0chy5")

[node name="GeneralItemDropArea" type="Control" parent="Interface/Theme"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_tgocy")

[node name="MarginContainer" type="MarginContainer" parent="Interface/Theme"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/Theme/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Main" type="VBoxContainer" parent="Interface/Theme/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Control" type="HBoxContainer" parent="Interface/Theme/MarginContainer/HBoxContainer/Main"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="ReturnButton" type="Button" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Control"]
layout_mode = 2
size_flags_vertical = 0
text = "Return"

[node name="Spacer" type="Control" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Control"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Weight" type="PanelContainer" parent="Interface/Theme/MarginContainer/HBoxContainer/Main"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_q477y")

[node name="Control" type="HBoxContainer" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Weight"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Weight/Control"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture = ExtResource("6_c8ey3")
expand_mode = 1
stretch_mode = 5

[node name="Weight" type="Label" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Weight/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "0/1000"
label_settings = SubResource("LabelSettings_tybj5")
horizontal_alignment = 1

[node name="Slots" type="HBoxContainer" parent="Interface/Theme/MarginContainer/HBoxContainer/Main"]
custom_minimum_size = Vector2(0, 190)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Modules" type="GridContainer" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
columns = 2

[node name="MODULE_1" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Modules" instance=ExtResource("8_del3g")]
layout_mode = 2
slot_id = 13
item_type = 9

[node name="MODULE_2" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Modules" instance=ExtResource("8_del3g")]
layout_mode = 2
slot_id = 14
item_type = 9

[node name="MODULE_3" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Modules" instance=ExtResource("8_del3g")]
layout_mode = 2
slot_id = 15
item_type = 9

[node name="MODULE_4" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Modules" instance=ExtResource("8_del3g")]
layout_mode = 2
slot_id = 16
item_type = 9

[node name="MODULE_5" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Modules" instance=ExtResource("8_del3g")]
layout_mode = 2
slot_id = 17
item_type = 9

[node name="MODULE_6" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Modules" instance=ExtResource("8_del3g")]
layout_mode = 2
slot_id = 18
item_type = 9

[node name="MODULE_7" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Modules" instance=ExtResource("8_del3g")]
layout_mode = 2
slot_id = 19
item_type = 9

[node name="MODULE_8" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Modules" instance=ExtResource("8_del3g")]
layout_mode = 2
slot_id = 20
item_type = 9

[node name="Body" type="GridContainer" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
columns = 3

[node name="TOP_WEAPON_1" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Body" instance=ExtResource("8_del3g")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2
slot_id = 6
item_type = 3

[node name="DRONE" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Body" instance=ExtResource("8_del3g")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2
slot_id = 8
item_type = 4

[node name="TOP_WEAPON_2" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Body" instance=ExtResource("8_del3g")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2
slot_id = 7
item_type = 3

[node name="SIDE_WEAPON_3" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Body" instance=ExtResource("8_del3g")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2
slot_id = 4
item_type = 2

[node name="TORSO" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Body" instance=ExtResource("8_del3g")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2

[node name="SIDE_WEAPON_4" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Body" instance=ExtResource("8_del3g")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2
slot_id = 5
item_type = 2

[node name="SIDE_WEAPON_1" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Body" instance=ExtResource("8_del3g")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2
slot_id = 2
item_type = 2

[node name="LEGS" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Body" instance=ExtResource("8_del3g")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2
slot_id = 1
item_type = 1

[node name="SIDE_WEAPON_2" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Body" instance=ExtResource("8_del3g")]
custom_minimum_size = Vector2(82, 82)
layout_mode = 2
slot_id = 3
item_type = 2

[node name="Specials" type="GridContainer" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2

[node name="GRAPPLING_HOOK" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Specials" instance=ExtResource("8_del3g")]
layout_mode = 2
slot_id = 11
item_type = 7

[node name="CHARGE_ENGINE" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Specials" instance=ExtResource("8_del3g")]
layout_mode = 2
slot_id = 9
item_type = 5

[node name="TELEPORTER" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Specials" instance=ExtResource("8_del3g")]
layout_mode = 2
slot_id = 10
item_type = 6

[node name="SHIELD" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Specials" instance=ExtResource("8_del3g")]
layout_mode = 2
slot_id = 12
item_type = 8

[node name="Perk" type="VBoxContainer" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots"]
layout_mode = 2
alignment = 2

[node name="PERK" parent="Interface/Theme/MarginContainer/HBoxContainer/Main/Slots/Perk" instance=ExtResource("8_del3g")]
layout_mode = 2
slot_id = 21
item_type = 10

[node name="SummaryAndItems" type="VBoxContainer" parent="Interface/Theme/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="Stats" type="PanelContainer" parent="Interface/Theme/MarginContainer/HBoxContainer/SummaryAndItems"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_mssp5")

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/Theme/MarginContainer/HBoxContainer/SummaryAndItems/Stats"]
layout_mode = 2

[node name="MechName" type="Label" parent="Interface/Theme/MarginContainer/HBoxContainer/SummaryAndItems/Stats/VBoxContainer"]
layout_mode = 2
text = "Summary"

[node name="StatsDisplay" parent="Interface/Theme/MarginContainer/HBoxContainer/SummaryAndItems/Stats/VBoxContainer" instance=ExtResource("9_0u8y1")]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ItemsLists" type="MarginContainer" parent="Interface/Theme/MarginContainer/HBoxContainer/SummaryAndItems"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="TorsosAndLegsIndex" parent="Interface/Theme/MarginContainer/HBoxContainer/SummaryAndItems/ItemsLists" instance=ExtResource("10_4wwq4")]
unique_name_in_owner = true
custom_minimum_size = Vector2(330, 0)
layout_mode = 2

[node name="SideWeaponsIndex" parent="Interface/Theme/MarginContainer/HBoxContainer/SummaryAndItems/ItemsLists" instance=ExtResource("10_4wwq4")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="TopWeaponsIndex" parent="Interface/Theme/MarginContainer/HBoxContainer/SummaryAndItems/ItemsLists" instance=ExtResource("10_4wwq4")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="DronesIndex" parent="Interface/Theme/MarginContainer/HBoxContainer/SummaryAndItems/ItemsLists" instance=ExtResource("10_4wwq4")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SpecialsListContainer" type="PanelContainer" parent="Interface/Theme/MarginContainer/HBoxContainer/SummaryAndItems/ItemsLists"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="SMItemsList" parent="Interface/Theme/MarginContainer/HBoxContainer/SummaryAndItems/ItemsLists/SpecialsListContainer" instance=ExtResource("11_023lt")]
unique_name_in_owner = true
layout_mode = 2

[node name="ModulesIndex" parent="Interface/Theme/MarginContainer/HBoxContainer/SummaryAndItems/ItemsLists" instance=ExtResource("10_4wwq4")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="TypeButtons" type="VBoxContainer" parent="Interface/Theme/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 2

[node name="BodyButton" type="Button" parent="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons"]
custom_minimum_size = Vector2(56, 56)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons/BodyButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_3vlsv")
expand_mode = 1
stretch_mode = 5

[node name="SideWeaponsButton" type="Button" parent="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons"]
custom_minimum_size = Vector2(56, 56)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons/SideWeaponsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_i7cqi")
expand_mode = 1
stretch_mode = 5

[node name="TopWeaponsButton" type="Button" parent="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons"]
custom_minimum_size = Vector2(56, 56)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons/TopWeaponsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_jnay7")
expand_mode = 1
stretch_mode = 5

[node name="DronesButton" type="Button" parent="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons"]
custom_minimum_size = Vector2(56, 56)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons/DronesButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("15_7xkvw")
expand_mode = 1
stretch_mode = 5

[node name="SpecialsButton" type="Button" parent="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons"]
custom_minimum_size = Vector2(56, 56)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons/SpecialsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("16_1lxqr")
expand_mode = 1
stretch_mode = 5

[node name="ModulesButton" type="Button" parent="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons"]
custom_minimum_size = Vector2(56, 56)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons/ModulesButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17_yemp4")
expand_mode = 1
stretch_mode = 5

[node name="PerksButton" type="Button" parent="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons"]
custom_minimum_size = Vector2(56, 56)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons/PerksButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("18_tyb6r")
expand_mode = 1
stretch_mode = 5

[connection signal="item_button_dropped" from="Interface/Theme/GeneralItemDropArea" to="." method="_on_general_item_drop_area_item_button_dropped"]
[connection signal="pressed" from="Interface/Theme/MarginContainer/HBoxContainer/Main/Control/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons/BodyButton" to="." method="_on_body_button_pressed"]
[connection signal="pressed" from="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons/SideWeaponsButton" to="." method="_on_side_weapons_button_pressed"]
[connection signal="pressed" from="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons/TopWeaponsButton" to="." method="_on_top_weapons_button_pressed"]
[connection signal="pressed" from="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons/DronesButton" to="." method="_on_drones_button_pressed"]
[connection signal="pressed" from="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons/SpecialsButton" to="." method="_on_specials_button_pressed"]
[connection signal="pressed" from="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons/ModulesButton" to="." method="_on_modules_button_pressed"]
[connection signal="pressed" from="Interface/Theme/MarginContainer/HBoxContainer/TypeButtons/PerksButton" to="." method="_on_perks_button_pressed"]
